tests/NormalTests/paczka1/fuzzy1/81951604.err
Error in line 1: S656 A576 6,7
Error in line 10: lzJLO A576 86,8
Error in line 12: S656 A722 44,6
Error in line 17: 4yeo A576 68,0
Error in line 27: X54s0X7m A310 59,7
Error in line 35: S656 A576 6,5
Error in line 36: S656 A722 26,0
